--- a/Codeforces/ContestsModule/View/ContestsView.xib
+++ b/Codeforces/ContestsModule/View/ContestsView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -43,6 +43,7 @@
                 <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fRw-iP-Xkw" userLabel="Reload">
                     <rect key="frame" x="414" y="697" width="55" height="55"/>
                     <color key="backgroundColor" red="0.40784313729999999" green="0.1529411765" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <accessibility key="accessibilityConfiguration" identifier="reload"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="55" id="QiQ-9I-8hU"/>
                         <constraint firstAttribute="height" constant="55" id="V3M-jg-up3"/>
@@ -56,6 +57,7 @@
                 <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDV-5t-XAn" userLabel="Filter">
                     <rect key="frame" x="414" y="634" width="55" height="55"/>
                     <color key="backgroundColor" red="0.40784313729999999" green="0.1529411765" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <accessibility key="accessibilityConfiguration" identifier="filter"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="55" id="T8N-9i-xqB"/>
                         <constraint firstAttribute="width" constant="55" id="jPz-TQ-d3R"/>
@@ -70,6 +72,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ak2-qa-PhA" userLabel="Menu">
                     <rect key="frame" x="319" y="760" width="75" height="75"/>
                     <color key="backgroundColor" red="0.40784313729999999" green="0.1529411765" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <accessibility key="accessibilityConfiguration" identifier="menu"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="75" id="pF5-2a-9lg"/>
                         <constraint firstAttribute="width" constant="75" id="rhT-9F-FnS"/>
