--- a/Codeforces/TopUsersModule/View/UserCell.xib
+++ b/Codeforces/TopUsersModule/View/UserCell.xib
@@ -10,48 +10,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UserCell" id="gTV-IL-0wX" customClass="UserCell" customModule="Code_Forces" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="145" height="145"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="145" height="145"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="43K-Zj-qRB">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <rect key="frame" x="0.0" y="0.0" width="145" height="145"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XFZ-Tu-g6y">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="4500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XuS-3O-bxL">
-                                <rect key="frame" x="8" y="72" width="84" height="20"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <size key="shadowOffset" width="1" height="1"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Madara2hor" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcb-Z2-GFJ">
-                                <rect key="frame" x="8" y="40" width="84" height="24"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="8" y="128" width="129" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <size key="shadowOffset" width="1" height="1"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XFZ-Tu-g6y">
+                                <rect key="frame" x="10" y="0.0" width="125" height="124"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="XuS-3O-bxL" firstAttribute="top" secondItem="lcb-Z2-GFJ" secondAttribute="bottom" constant="8" id="5e0-Ja-qjD"/>
-                            <constraint firstItem="XuS-3O-bxL" firstAttribute="leading" secondItem="43K-Zj-qRB" secondAttribute="leading" constant="8" id="6EJ-Df-KYg"/>
-                            <constraint firstAttribute="trailing" secondItem="XFZ-Tu-g6y" secondAttribute="trailing" id="6TF-pV-J5M"/>
-                            <constraint firstItem="lcb-Z2-GFJ" firstAttribute="leading" secondItem="43K-Zj-qRB" secondAttribute="leading" constant="8" id="GK7-aU-rlh"/>
-                            <constraint firstAttribute="trailing" secondItem="XuS-3O-bxL" secondAttribute="trailing" constant="8" id="WPj-zs-svx"/>
-                            <constraint firstAttribute="bottom" secondItem="XuS-3O-bxL" secondAttribute="bottom" constant="8" id="dj7-eD-VFo"/>
-                            <constraint firstItem="XFZ-Tu-g6y" firstAttribute="leading" secondItem="43K-Zj-qRB" secondAttribute="leading" id="ntY-Gc-TLe"/>
-                            <constraint firstItem="lcb-Z2-GFJ" firstAttribute="top" secondItem="43K-Zj-qRB" secondAttribute="top" constant="40" id="oAD-28-9tF"/>
-                            <constraint firstAttribute="bottom" secondItem="XFZ-Tu-g6y" secondAttribute="bottom" id="soa-UX-ycL"/>
-                            <constraint firstAttribute="trailing" secondItem="lcb-Z2-GFJ" secondAttribute="trailing" constant="8" id="vPy-v3-c3H"/>
-                            <constraint firstItem="XFZ-Tu-g6y" firstAttribute="top" secondItem="43K-Zj-qRB" secondAttribute="top" id="yK6-Tx-CWY"/>
+                            <constraint firstItem="XFZ-Tu-g6y" firstAttribute="leading" secondItem="43K-Zj-qRB" secondAttribute="leading" constant="10" id="GBU-ML-RRX"/>
+                            <constraint firstAttribute="trailing" secondItem="lcb-Z2-GFJ" secondAttribute="trailing" constant="8" id="NDw-X1-s6x"/>
+                            <constraint firstItem="lcb-Z2-GFJ" firstAttribute="top" secondItem="XFZ-Tu-g6y" secondAttribute="bottom" constant="4" id="SX4-WD-4ZP"/>
+                            <constraint firstAttribute="bottom" secondItem="lcb-Z2-GFJ" secondAttribute="bottom" id="TUu-jK-yhb"/>
+                            <constraint firstItem="lcb-Z2-GFJ" firstAttribute="leading" secondItem="43K-Zj-qRB" secondAttribute="leading" constant="8" id="XBg-lZ-rd7"/>
+                            <constraint firstItem="XFZ-Tu-g6y" firstAttribute="top" secondItem="43K-Zj-qRB" secondAttribute="top" id="oYY-xL-Bv5"/>
+                            <constraint firstAttribute="trailing" secondItem="XFZ-Tu-g6y" secondAttribute="trailing" constant="10" id="z5J-wc-CB7"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -63,13 +51,12 @@
                 <constraint firstItem="43K-Zj-qRB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="SLT-Up-COc"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="100" height="100"/>
+            <size key="customSize" width="97" height="93"/>
             <connections>
                 <outlet property="handler" destination="lcb-Z2-GFJ" id="F3h-2R-RgT"/>
                 <outlet property="profileImage" destination="XFZ-Tu-g6y" id="TXg-ks-WxH"/>
-                <outlet property="rating" destination="XuS-3O-bxL" id="lNP-6o-s3H"/>
             </connections>
-            <point key="canvasLocation" x="176.81159420289856" y="161.38392857142856"/>
+            <point key="canvasLocation" x="173.91304347826087" y="158.03571428571428"/>
         </collectionViewCell>
     </objects>
 </document>
